modules/gdscript/tests/scripts/analyzer/errors/function_param_type_invalid_contravariance_3.gd
class A:
	func f(_p: int):
		pass

class B extends A:
	func f(_p: float): # No implicit conversion.
		pass

func test():
	pass
